cleanup [editor]: fix warnings in `FoldingModelImpl`
GitOrigin-RevId: e1477db62d94da42121c3848b7896c09e3a050d6